<resources>
    <string name="app_name">EnglishBuddy</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="OR">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Hi! Welcome to English Buddy</string>
    <string name="welcome_page">Hi! Welcome \nto English \nBuddy</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_signup">Create Account</string>
    <string name="title_signup_page">Fill your information below or register \nwith your social account</string>
    <string name="title_login">Login</string>
    <string name="title_login_page">Hi! Welcome to English Buddy</string>
    <string name="err_msg_email">Invalid Email Address</string>
    <string name="err_msg_min_char">Minimum character length is %1$d</string>
    <string name="err_msg_required">Minimum character length is %1$d</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="havent_acc">Don\'t have an account ?</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_top_card">Start Your AI-Enhanced \nIELTS Preperation\nToday</string>
    <string name="title_listening">Listening</string>
    <string name="title_reading">Reading</string>
    <string name="title_writing">Writing</string>
    <string name="total_score">Your score is %1$d out of %2$d</string>
    <string name="question">Question</string>
    <string name="progress">0/10</string>
    <string name="submit">SUBMIT</string>
    <string name="start_question">PLAY</string>
    <string name="btn_text_play">Play</string>
    <string name="btn_text_stop">Stop</string>
    <string name="writing_here">Write Here</string>
    <string name="question_writing">The bar chart here describes some changes about the percentage of people were born in Australia and who were born outside Australia living in urban, rural and town between 1995 and 2010.\n\nSummarise the information by selecting and reporting the main features and make comparisons where relevant.</string>
</resources>