<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:padding="16dp"
    tools:context=".ui.bottom_nav.ui.home.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:id="@+id/tv_title_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/welcome_page"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_top_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_home"
        app:srcCompat="@drawable/top_card"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_top_card"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="42dp"
        android:paddingLeft="28dp"
        android:paddingRight="24dp"
        android:text="@string/title_top_card"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_home" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnlistening"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:alpha="0"
        android:backgroundTint="@color/orange"
        android:drawableLeft="@drawable/baseline_audiotrack_24"
        android:drawablePadding="12dp"
        android:text="@string/title_listening"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_card"
        tools:alpha="100" />

    <Button
        android:id="@+id/btnReading"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:backgroundTint="@color/orange"
        android:drawableLeft="@drawable/baseline_mark_chat_read_24"
        android:text="@string/title_reading"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlistening"
        tools:alpha="100" />

    <Button
        android:id="@+id/btnWriting"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:backgroundTint="@color/orange"
        android:drawableLeft="@drawable/baseline_border_color_24"
        android:text="@string/title_writing"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReading"
        tools:alpha="100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>