<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/listeningActivity"
    tools:context=".ui.listening.ListeningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#363A43"
            android:text="@string/question"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_play_arrow_24"
                android:layout_marginRight="12dp"
                android:text="@string/btn_text_play" />
            <Button
                android:id="@+id/btn_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:drawableLeft="@drawable/baseline_stop_24"
                android:text="@string/btn_text_stop" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="2"
                />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                android:text="@string/progress"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="#7A8089"
            tools:text="Apple" />

        <TextView
            android:id="@+id/tv_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="#7A8089"
            tools:text="Apple"
            />

        <TextView
            android:id="@+id/tv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="#7A8089"
            tools:text="Apple"
            />

        <TextView
            android:id="@+id/tv_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="#7A8089"
            tools:text="Apple"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/submit"
            />

    </LinearLayout>

</ScrollView>